tests/palaiologos/fail/integer_bounds/2^32/sto_both.asm
sto 100000000h, 100000000h
